--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -2,8 +2,24 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid;
+  box-shadow: 0px 1px 0px #E5E9F2;
   min-height: 72px;
+  position: sticky;
+}
+
+@media screen and (min-width: 600px) {
+	.site-header {
+		padding: 0 2em;
+	}
+}
+
+@media screen and (min-width: 900px) {
+	.site-header {
+		display: flex;
+	}
+	.site-branding {
+		justify-content: space between;
+	}
 }
 
 .main-navigation {
