--- a/style.css
+++ b/style.css
@@ -983,4 +983,50 @@ textarea {
   margin-bottom: 1.5em;
 }
 
+/* Footer
+--------------------------------------------- */
+aside.footer {
+  display: flex;
+  background-color: #2EC5CE;
+  padding: 4em 0;
+  background-image: url(../../assets/img/placeholder.com-logo1.png);
+  background-size: 100% 100%;
+}
+
+.first.quarter.left.widget-area {
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+  flex-wrap: nowrap;
+  align-items: stretch;
+  justify-content: space-between;
+  align-content: flex-start;
+  color: #D5FAFC;
+}
+
+.second.quarter.widget-area {
+  display: flex;
+  width: 25%;
+  flex-direction: column;
+  color: #D5FAFC;
+}
+
+.third.quarter.widget-area {
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+  color: #D5FAFC;
+}
+
+.fourth.quarter.right.widget-area {
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+  color: #D5FAFC;
+}
+
+.footer a {
+  color: #D5FAFC;
+}
+
 /*# sourceMappingURL=style.css.map */
