--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: Complement2
+Theme Name: Designdew
 Theme URI: http://underscores.me/
 Author: Ruud Slagers
 Author URI: http://underscores.me/
@@ -15,7 +15,7 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned.
 
-Complement2 is based on Underscores https://underscores.me/, (C) 2012-2020 Automattic, Inc.
+Designdew is based on Underscores https://underscores.me/, (C) 2012-2020 Automattic, Inc.
 Underscores is distributed under the terms of the GNU GPL v2 or later.
 
 Normalizing styles have been helped along thanks to the fine work of
