--- a/assets/styles/base/typography/_headings.scss
+++ b/assets/styles/base/typography/_headings.scss
@@ -11,10 +11,15 @@ h1 {
 	font-family: $font__main;
 	font-style: normal;
 	font-weight: 800;
-	font-size: 72px;
+	font-size: 30px;
+
 	line-height: 136%;
 	text-align: center;
 	font-feature-settings: 'salt' on, 'liga' off;
+
+	@include breakpoint(md){
+		font-size: 72px;
+	}
 }
 
 h2 {
