Start homepage en bootstrap

--- a/assets/styles/abstracts/_abstracts.scss
+++ b/assets/styles/abstracts/_abstracts.scss
@@ -3,4 +3,7 @@
 @import "variables/structure";
 @import "variables/columns";
 @import "variables/breakpoints";
+@import "variables/containers";
+
+
 @import "mixins/mixins";
