--- a/assets/styles/base/typography/_headings.scss
+++ b/assets/styles/base/typography/_headings.scss
@@ -12,7 +12,7 @@ h1 {
 	font-style: normal;
 	font-weight: 800;
 	font-size: 30px;
-
+	color: #18191F;
 	line-height: 136%;
 	text-align: center;
 	font-feature-settings: 'salt' on, 'liga' off;
