--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,21 +1,21 @@
 /*!
-Theme Name: Complement2
+Theme Name: designdew
 Theme URI: http://underscores.me/
 Author: Ruud Slagers
 Author URI: http://underscores.me/
-Description: Complement Reclame Thema
+Description: designdew Reclame Thema
 Version: 1.0.0
 Tested up to: 5.4
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: complement
+Text Domain: designdew
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned.
 
-Complement2 is based on Underscores https://underscores.me/, (C) 2012-2020 Automattic, Inc.
+designdew is based on Underscores https://underscores.me/, (C) 2012-2020 Automattic, Inc.
 Underscores is distributed under the terms of the GNU GPL v2 or later.
 
 Normalizing styles have been helped along thanks to the fine work of
