--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3,13 +3,13 @@ Theme Name: Designdew
 Theme URI: http://underscores.me/
 Author: Ruud Slagers
 Author URI: http://underscores.me/
-Description: Complement Reclame Thema
+Description: designdew Reclame Thema
 Version: 1.0.0
 Tested up to: 5.4
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: complement
+Text Domain: designdew
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 
 This theme, like WordPress, is licensed under the GPL.
