Blog sectie + header + gedeelte onze diensten

--- a/assets/styles/components/_components.scss
+++ b/assets/styles/components/_components.scss
@@ -29,4 +29,6 @@
 /* Galleries
 --------------------------------------------- */
 @import "custom/hero";
-@import "custom/statistieken"
+@import "custom/statistieken";
+@import "custom/blog";
+@import "custom/diensten";
