--- a/assets/styles/components/custom/_statistieken.scss
+++ b/assets/styles/components/custom/_statistieken.scss
@@ -4,7 +4,7 @@
 	background-repeat: no-repeat;
 	background-size: 100%;
 	color: white;
-	padding: 2em 0;
+	padding: 3em 0;
 }
 
 .statistieken .sub-text {
@@ -20,7 +20,7 @@
 }
 
 .statistieken .row .col-sm {
-	height: 300px;
+	// height: 300px;
 }
 
 .statistieken .row .col-sm::before {
