--- a/assets/styles/components/navigation/_navigation.scss
+++ b/assets/styles/components/navigation/_navigation.scss
@@ -2,9 +2,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0px 1px 0px #E5E9F2;
+//   box-shadow: 0px 1px 0px #E5E9F2;
   min-height: 72px;
   position: sticky;
+}
+
+.header {
+	box-shadow: 0px 1px 0px #E5E9F2;
 }
 
 @media screen and (min-width: 600px) {
@@ -136,9 +140,9 @@
 }
 
 .main-navigation li {
-	padding: 0px 20px;
+	padding: 0px 15px;
 }
 
 .main-navigation li:nth-child(1) {
-	padding: 0 20px 0 0;
+	padding: 0 15px 0 0;
 }
