--- a/assets/styles/base/typography/_headings.scss
+++ b/assets/styles/base/typography/_headings.scss
@@ -32,6 +32,15 @@ h2 {
 	font-feature-settings: 'salt' on, 'liga' off;
 }
 
+h4 {
+	font-family: $font__main;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 18px;
+	line-height: 156%;
+	font-feature-settings: 'salt' on, 'liga' off;
+}
+
 h5 {
 	font-family: $font__main;
 	font-style: normal;
