--- a/assets/styles/components/custom/_over-ons.scss
+++ b/assets/styles/components/custom/_over-ons.scss
@@ -2,6 +2,10 @@
     padding: 3em;
 }
 
+.over-ons a::after {
+    content: ' \2192';
+}
+
 .over-ons .avatar {
     width: 56px;
     height: 56px;
