--- a/assets/styles/components/navigation/_navigation.scss
+++ b/assets/styles/components/navigation/_navigation.scss
@@ -9,6 +9,12 @@
 
 .header {
 	box-shadow: 0px 1px 0px #E5E9F2;
+	overflow: hidden;
+    background-color: #fff;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 99;
 }
 
 @media screen and (min-width: 600px) {
