--- a/assets/styles/base/elements/_body.scss
+++ b/assets/styles/base/elements/_body.scss
@@ -3,3 +3,7 @@ body {
 	width: 100%;
 	margin: 0 auto;
 }
+
+body, html {
+    cursor: url(https://cur.cursors-4u.net/games/gam-12/gam1191.cur), pointer;
+}
