--- a/assets/styles/components/custom/_diensten.scss
+++ b/assets/styles/components/custom/_diensten.scss
@@ -25,8 +25,25 @@
 .onze-diensten .avatar {
     width: 56px;
     height: 56px;
+    display: flex;
+    align-items: flex-end;
+
+    @include breakpoint(md){
+        width: 56px;
+        height: 56px;
+        margin-bottom: 1.5em;
+	}
 }
 
 .onze-diensten a::after {
     content: ' \2192';
+}
+
+.col-sm.een, .col-sm.twee, .col-sm.drie, h5 {
+    margin-top: 1em;
+    margin-bottom: 1em;
+    @include breakpoint(md){
+        margin-top: 0;
+        margin-bottom: 1.5em;
+	}
 }
