--- a/assets/styles/components/custom/_diensten.scss
+++ b/assets/styles/components/custom/_diensten.scss
@@ -34,6 +34,16 @@
     content: ' \2192';
 }
 
+.onze-diensten .avatar.website {
+    width: 110px;
+}
+.onze-diensten .avatar.webshop {
+    width: 85px;
+}
+.onze-diensten .avatar.seo {
+    width: 90px;
+}
+
 .col-sm.een, .col-sm.twee, .col-sm.drie, h5 {
     margin-top: 1em;
     margin-bottom: 1em;
