--- a/assets/styles/components/custom/_blog.scss
+++ b/assets/styles/components/custom/_blog.scss
@@ -1,7 +1,24 @@
 .blog {
-    padding: 3em;
+    padding: 1em;
+    @include breakpoint(md){
+        padding: 3em;
+      }
 }
 
 .blog .col-sm {
     margin: auto;
+}
+
+.blog p.sub-text {
+    margin-top: 130px;
+    @include breakpoint(md){
+        margin-top: 0;
+      }
+}
+
+.blog .col-sm.featured-img {
+    margin-top: -350px;
+    @include breakpoint(md){
+        margin-top: 0;
+      }
 }
