--- a/assets/styles/components/custom/_over-ons.scss
+++ b/assets/styles/components/custom/_over-ons.scss
@@ -1,5 +1,8 @@
 .over-ons {
-    padding: 3em;
+    padding: 1em;
+    @include breakpoint(md){
+        padding: 3em;
+      }
 }
 
 .over-ons a::after {
@@ -9,7 +12,9 @@
 .over-ons .avatar {
     width: 56px;
     height: 56px;
-    margin-bottom: -20px;
+    @include breakpoint(md){
+        margin-bottom: 10px;
+      }
 }
 
 .over-ons .avatar:nth-child(5) {
@@ -22,7 +27,10 @@
 
 .over-ons p {
     margin-bottom: 5px;
-    padding-right: 80px;
+    padding-right: 10px;
+    @include breakpoint(md){
+        padding-right: 80px;
+      }
 }
 
 .over-ons .top {
@@ -60,4 +68,18 @@
 .over-ons .bottom .afbeelding-4 {
     width: 356px;
     height: 356px;
+}
+
+.col-sm.fotos {
+    display: none;
+    @include breakpoint(md){
+        display: block;
+      }
+}
+
+.col-sm.voorstellen {
+    padding-bottom: 3em;
+    @include breakpoint(md){
+        padding-bottom: 0;
+      }
 }
