--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -1,7 +1,10 @@
 aside.footer {
     display: flex;
 	background-color: $color__brand__turquoise;
-	padding: 4em 0;
+	padding: 4em 1em;
+    @include breakpoint(md){
+        padding: 4em 0;
+      }
 }
 
 .footer {
@@ -138,4 +141,22 @@ h3.widget-title {
 .row.coloform {
     margin-top: 4em;
     margin-bottom: -3em;
+}
+
+.footer .col-sm.menu, .col-sm.portfolio {
+    display: none;
+    @include breakpoint(md){
+        display: block;
+      }
+}
+
+.col-sm.disclaimer {
+    padding: 1em;
+    margin-left: 0;
+    font-size: 10px;
+    @include breakpoint(md){
+        padding: 0;
+        margin-left: initial;
+        font-size: initial;
+      }
 }
