--- a/assets/styles/components/custom/_hero.scss
+++ b/assets/styles/components/custom/_hero.scss
@@ -2,8 +2,20 @@
 	position: relative;
 	text-align: center;
 	overflow: hidden;
+	background-color: $color__brand__turquoise;
+	background-image: url(/wp-content/themes/designdew/dist/images/Patterns.svg);
+	background-repeat: no-repeat;
+
+    background-position: right, left;
+	@include breakpoint(md){
+		background-size: 180% 100%;
+		background-image: url(/wp-content/themes/designdew/dist/images/Patterns.svg), url(/wp-content/uploads/2021/06/dd-footer.svg);
+	  }
 	button {
 		margin-bottom: 90px;
+		background-color: $color__brand__turquoise__800;
+		padding:15px 20px;
+		color: $color__brand__turquoise__100;
 	}
 	.hero-img {
 		max-width: 280px;
@@ -14,9 +26,12 @@
 			width: 100%;
 		}
 	}
+	.hero-img img{
+		z-index: 1;
+	}
 
 	&:after {
-		z-index: -1;
+		z-index: 0;
 		content: "";
 		display: block;
 		width: 1200px;
@@ -32,4 +47,5 @@
 
 .hero h1 {
 	margin-top: 2em;
+	color: $color__brand__turquoise__100;
 }
