--- a/assets/styles/components/custom/_over-ons.scss
+++ b/assets/styles/components/custom/_over-ons.scss
@@ -1,6 +1,9 @@
 .over-ons {
     padding: 1em;
-    @include breakpoint(md){
+      @include breakpoint(md){
+        padding: 0;
+      }
+      @include breakpoint(lg){
         padding: 3em;
       }
 }
@@ -39,6 +42,12 @@
     align-items: flex-end;
     padding: 0px;
     margin: 20px 0px;
+    @include breakpoint(md){
+        margin-top: 4em;
+      }
+    @include breakpoint(lg){
+        margin-top: 0;
+    }
 }
 
 .over-ons .bottom {
@@ -46,6 +55,12 @@
     flex-direction: row;
     align-items: flex-start;
     padding: 0px;
+    @include breakpoint(md){
+        margin-top: -5em;
+      }
+    @include breakpoint(lg){
+        margin-top: 0;
+    }
 }
 
 .over-ons .top .afbeelding-1 {
@@ -74,7 +89,12 @@
     display: none;
     @include breakpoint(md){
         display: block;
+        width: 50%;
       }
+    @include breakpoint(lg){
+        display: block;
+    }
+    
 }
 
 .col-sm.voorstellen {
