--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -143,7 +143,7 @@ h3.widget-title {
     margin-bottom: -3em;
 }
 
-.footer .col-sm.menu, .col-sm.portfolio {
+.footer .col-sm.menu {
     display: none;
     @include breakpoint(md){
         display: block;
