--- a/assets/styles/components/custom/_recente-projecten.scss
+++ b/assets/styles/components/custom/_recente-projecten.scss
@@ -63,21 +63,37 @@
     transform: scale(1.05);
   }
   
-  .projecten .img-content-hover {
-    z-index: 1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    white-space: nowrap;
-    display: none;
-    padding: 0.3rem;
-    padding: 0 20px;
-    background: $color__border-button;
-    border-radius: 5px;
-    font-weight: 400;
-    margin-top: 1.25rem;
-    margin-left: -2rem;
-  }
+  // .projecten .img-content-hover {
+  //   z-index: 1;
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   white-space: nowrap;
+  //   display: none;
+  //   padding: 0.3rem;
+  //   padding: 0 20px;
+  //   background: $color__border-button;
+  //   border-radius: 5px;
+  //   font-weight: 400;
+  //   margin-top: 1.25rem;
+  //   margin-left: -2rem;
+  // }
+
+  // .projecten .owl-project .img-content-hover {
+  //   z-index: 1;
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   white-space: nowrap;
+  //   display: none;
+  //   padding: 0.3rem;
+  //   padding: 0 20px;
+  //   background: $color__border-button;
+  //   border-radius: 5px;
+  //   font-weight: 400;
+  //   margin-top: 1.25rem;
+  //   margin-left: -2rem;
+  // }
   
   .projecten .title {
     color: #fff;
