--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -160,3 +160,17 @@ h3.widget-title {
         font-size: initial;
       }
 }
+
+.col-sm.dd {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex-grow: 2;
+}
+
+.col-sm.dd .textwidget, .widget_media_image {
+    margin-top: 0;
+    @include breakpoint(md){
+        margin-top: -50px;
+      }
+}
