--- a/assets/styles/components/_components.scss
+++ b/assets/styles/components/_components.scss
@@ -40,3 +40,7 @@
 /* Projecten
 --------------------------------------------- */
 @import "custom/projecten/projecten.scss";
+
+
+/* Barba.js */
+@import "animation/home.scss";
