--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -109,3 +109,5 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /* Footer
 --------------------------------------------- */
 @import "layouts/footer";
+
+@import '~owl.carousel/dist/assets/owl.carousel.css';
